--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
 Hello there, awesome person!
+<html>
+  <body>
+    <h1>Hello, Everyone</h1>
+    Good to see you all in my new webpage.
+  </body>
+</html>
