--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@ Hello there, awesome person!
     Good to see you all, I'm glad to invite all to my new coffeeshop.
     You will experience great coffee and you will never forget the aroma. 
     
+    <img src="https://avatars.githubusercontent.com/u/61617372?v=4">
+    
   </body>
 </html>
