--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@ Hello there, awesome person!
       <li>Business people</li>
       <li>Investors</li>
       <li>Media and Reports</li>
+      <li><a href="https://github.com">This is a link to GitHub!</a></li>
+
     </ol>
     
     <ul>
