--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ Hello there, awesome person!
   
   <head>
     <title>Explore my Coffeeshop</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   
   <body>
