--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ Hello there, awesome person!
     <h1>Hello, Everyone</h1>
     <h2>Really Excited to look forward for your response</h2>
     
-    Good to see you all, I'm glad to invite all to my new coffeeshop.
+    Good to see you all, I'm glad to invite all to my new coffeeshop.<br>
     You will experience great coffee and you will never forget the aroma. 
     
     <img src="https://avatars.githubusercontent.com/u/61617372?v=4">
